fix: limit scope of previous label visibility change

--- a/src/content.scss
+++ b/src/content.scss
@@ -23,6 +23,10 @@ $black: #355263;
       opacity: 0.7;
     }
 
+    .list-card-title {
+      display: none !important;
+    }
+
     .enhanced-header-text {
       display: block;
       text-align: center;
